welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (i <- 1 to getMondeHauteur()) {
  ^